# sdk-zephyr

boards/nordic/nrf54h20dk/: Kconfig.defconfig
cmake/: mcuboot.cmake
drivers/spi/: spi_context.h
samples/hello_world/: sample.yaml  sysbuild.cmake  sysbuild_fw_loader.conf  sysbuild_single_app.conf
samples/hello_world/boards/: nrf52840dk_nrf52840_single_app.overlay  nrf54l15dk_nrf54l15_cpuapp_fw_loader.overlay  nrf54l15dk_nrf54l15_cpuapp_single_app.overlay
samples/hello_world/sysbuild/: firmware_loader.conf  firmware_loader.overlay  mcuboot.overlay  mcuboot_fw_loader.conf  mcuboot_fw_loader.overlay  mcuboot_single_app.conf  mcuboot_single_app.overlay  nrf52840_fw_loader.overlay  nrf54l15_fw_loader.overlay  nrf54l15_single_app.overlay
samples/subsys/mgmt/mcumgr/smp_svr/: prj_nrf54h20.conf  sample.yaml
samples/subsys/mgmt/mcumgr/smp_svr/boards/: nrf54h20dk_nrf54h20_cpuapp.overlay
samples/subsys/mgmt/mcumgr/smp_svr/sysbuild/: CMakeLists.txt  nrf54h20dk_nrf54h20_mcuboot.overlay
